projeto do curso de Docker

--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -1,1 +1,9 @@
-
+version: '2.4'
+services:
+    apache:
+        image: httpd:2.4
+        container_name: my-apache-project
+        ports:
+        - '80:80'
+        volumes:
+        - ./public-html:/usr/local/apache2/htdocs/
